update on 26april 4.10pm

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   border-bottom-left-radius: 10px;
   background-color: rgba(250, 250, 250, 0.9);
 }
-.G{
+.blurBackground{
   border-top-right-radius: 10px;
 
   background-color: rgba(250, 250, 250, 0.9);
