--- a/src/Recipes/Recipes.css
+++ b/src/Recipes/Recipes.css
@@ -864,6 +864,7 @@ ol {
 ========================*/
 
 .page-top-section {
+	/* background-image: url('images/single-big.jpg'); */
 	text-align: center;
 }
 
@@ -924,7 +925,7 @@ ol {
 
 .sf-warp {
 	width: 100%;
-	margin: 72px auto 0;
+	margin: 30px auto 0;
 	padding: 44px 0;
 	background: saddlebrown;
 }
